# flight-booking-be

./: .gitignore  GEMINI.md  PLAN.md  README.md  RULES.md  WORKFLOW.md  pyproject.toml  requirements.txt
.gemini/: RULES.md
.gemini/skills/: flight-expert.md
ai-context/: openapi.json
ai-context/legacy-api/: airports.json  bookings.json  flight-search.json  offer-id.json  reservations.json
ai-context/new-api/: bookings.json  corrected-bookings.json  corrected-flight-search.json  corrected-offer-id.json  flight-search.json  offer-id.json  reservations.json
app/: main.py
app/api/v1/endpoints/: airports.py  bookings.py  flights.py
app/api/v1/schemas/: bookings.py  flights.py
app/clients/: legacy_api.py
app/clients/schemas/: legacy.py
app/core/: config.py  exceptions.py
app/services/: airports.py  bookings.py  flights.py
docs/: DOCUMENTATION.md
requirements/: requirements.md
tests/test_api/: test_bookings.py  test_flights.py  test_offer_details.py  test_resilience.py
