[project]
name = "flight-booking-be"
version = "0.1.0"
description = "BFF API wrapper for Legacy Flight System"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.1",
    "diskcache>=5.6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.2.0",
    "isort>=5.13.0",
    "mypy>=1.8.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310"]
